--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,7 +25,7 @@ jobs:
           key: mkdocs-material-${{ env.cache_id }}
           path: .cache
           restore-keys: |
-            mkdocs-material-
+            mkdocs-material
       - run: pip install \  # install any required mkdocs packages or plugins
               mkdocs-material \
               mkdocs  # you will have to add additional packages if you pip installed any extra features
